--- a/src/main/resources/templates/spot.html
+++ b/src/main/resources/templates/spot.html
@@ -472,7 +472,6 @@
 					<a target="_blank" rel="noopener noreferrer">
 						<div class="button-box">
 							<input type="submit" id="submit" value="pickup" th:href="@{/oritabi/map}"  >
-
 						</div>
 					</a>
 				</div>
@@ -482,7 +481,7 @@
 
 		 </div>
 
-		 
+	</div>	 
 
 		 <script type="text/javascript">
 			$(function(){
