--- a/src/main/resources/static/css/manager_login.css
+++ b/src/main/resources/static/css/manager_login.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 html, body, div, span, iframe,
-h1, h2, h3, h4, h5, h6, p, img, a,
+h1, h2, h4, h5, h6, p, img, a,
 ol, ul, li,
 form, label,
 table, tbody, tfoot, thead, tr, th, td,
@@ -14,8 +14,11 @@ article,footer, header, menu, nav, section {
   text-decoration: none;
   vertical-align: baseline;
 }
-.lo-tittle{
+
+.lo-tittle {
   font-weight: bold;
+  margin: 0 auto;
+  text-align: center;
 }
 /* 共通CSS */
 .containerds {
@@ -41,7 +44,7 @@ html {
 
     .wrapper-title h3{
         font-size: 25px;
-        color: #3e3e3b;
+        color: #333333;
     }
 
     .wrapper-title p {
@@ -65,7 +68,7 @@ html {
 }
 
 .btn-submit {
-    background-color: #4c586f;
+    background-color: #c1692a;
     color: #fff;
     margin-top: 15px;
 }
@@ -76,17 +79,16 @@ html {
     padding: 80px 0 ;
 }
     .login-wrapper-title {
-        margin-left: 50px;
         margin-bottom: 30px;
     }
 
     .login-wrapper-title h3{
         font-size: 25px;
-        color: #3e3e3b;
+        color: #333333;
     }
 
     .login-wrapper-title p {
-        font-size: 13px;
+        font-size: 12px;
         color: #a2aab0;
     }
 
@@ -94,10 +96,11 @@ html {
     padding: 50px 0; 
     width: 50%;
     margin: 100px auto;
-    background-color: #ebeced;
+    background-color: #faf0e6;
 }
+
     .login-form {
-        width: 70%;
+        width: 60%;
         margin: 0 auto;
     }
 
@@ -120,6 +123,58 @@ html {
       bottom: 0;
     }    
 
+    @media screen and (max-width:800px) {
 
+    .lo-tittle{
+        font-weight: bold;
+        margin-bottom: 20px;
+     
+        margin-left: 0px;
+        text-align: center;
+      }
+      .login-wrapper {
+        height:auto;
+        width: 100%;
+          text-align: center;
+          padding: 30px 0 ;
+      }
+          .login-wrapper-title {
+            margin: 0px;
+          }
+      
+          .login-wrapper-title h3{
+              font-size: 18px;
+              color: #333333;
+          }
+      
+          .login-wrapper-title p {
+              font-size: 12px;
+              color: #a2aab0;
+          }
+          .containerds{
+            width: 100%;
+          }
+      
+      .login {
+          padding: 30px 0; 
+          width: 95%;
+          margin: 30px auto;
+          background-color: #faf0e6;
+      }
+          .login-form {
+              width: 60%;
+              margin: 0 auto;
+          }
+      
+          .login-form input {
+              border: none;
+              width: 100%;
+              height: 25px;
+          }
+      
+          .login-form p {
+              text-align: left;
+          }
+    }
 
 
